// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.00
  </h1>
</div>
`;

exports[`should correctly render ExpenseSummary with 1 expense 2`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $2,394,832.90
  </h1>
</div>
`;
